# socratic-avatar

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  initial_plan.md  phases.md  repo_structure_and_architecture.md
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/components/: AudioCapture.tsx  AvatarView.tsx  SessionControls.tsx  TutorSession.tsx
client/hooks/: useAudioPlayback.ts  useAudioStream.ts  useWebSocket.ts
client/lib/: simli.ts  types.ts
server/: config.py  main.py  pyproject.toml
server/instrumentation/: __init__.py  cost_tracker.py  logger.py  metrics.py  timer.py
server/pipeline/: llm_fast.py  llm_quality.py  llm_router.py  orchestrator.py  sentence_chunker.py  stt.py  tts.py  vad.py
server/socratic/: classifier.py  concepts.py  prompts.py  state_machine.py
tests/: conftest.py
tests/integration/: test_llm_streaming.py  test_stt_pipeline.py  test_tts_streaming.py
tests/unit/: test_cost_tracker.py  test_llm_router.py  test_metrics.py  test_sentence_chunker.py  test_state_machine.py  test_stt.py  test_vad.py
