[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socratic-tutor-server"
version = "0.1.0"
description = "Socratic AI Video Tutor — Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "assemblyai>=0.30.0",
    "groq>=0.5.0",
    "anthropic>=0.39.0",
    "elevenlabs>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["pipeline", "socratic", "instrumentation"]
py-modules = ["main", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
